--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
     android:versionCode="1"
 	android:versionName="1.0">
 
-    
     <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="31"/>
 
     <application
@@ -19,7 +18,7 @@
             android:resource="@array/xposed_scope" />
     <meta-data
         android:name="xposeddescription"
-        android:value="领创二维码登录" />
+        android:value="领创Hook" />
     <meta-data
         android:name="xposedminversion"
         android:value="82" />
