--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,15 @@
         android:allowBackup="true"
         android:label="@string/app_name"
         android:supportsRtl="true">
-<meta-data
+    <meta-data
         android:name="xposedmodule"
         android:value="true" />
-        <meta-data
-            android:name="xposedscope"
-            android:resource="@array/xposed_scope" />
+    <meta-data
+        android:name="xposedscope"
+        android:resource="@array/xposed_scope" />
     <meta-data
         android:name="xposeddescription"
-        android:value="领创Hook" />
+        android:value="@string/description" />
     <meta-data
         android:name="xposedminversion"
         android:value="82" />
