--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,26 +2,42 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.th7.flinspirer.admin"
     android:versionCode="1"
-	android:versionName="1.0">
+    android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="31"/>
+    <uses-sdk
+        android:minSdkVersion="23"
+        android:targetSdkVersion="31" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:label="@string/app_name"
-        android:supportsRtl="true">
-    <meta-data
-        android:name="xposedmodule"
-        android:value="true" />
-    <meta-data
-        android:name="xposedscope"
-        android:resource="@array/xposed_scope" />
-    <meta-data
-        android:name="xposeddescription"
-        android:value="@string/description" />
-    <meta-data
-        android:name="xposedminversion"
-        android:value="82" />
+        android:supportsRtl="true"
+        android:requestLegacyExternalStorage="true">
+        <activity
+            android:name="com.th7.flinspirer.MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <meta-data
+            android:name="xposedmodule"
+            android:value="true" />
+        <meta-data
+            android:name="xposedscope"
+            android:resource="@array/xposed_scope" />
+        <meta-data
+            android:name="xposeddescription"
+            android:value="@string/description" />
+        <meta-data
+            android:name="xposedminversion"
+            android:value="82" />
     </application>
 
 </manifest>
