--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,12 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.th7.flinspirer.admin"
         minSdk 16
-        targetSdk 31
+        targetSdk 34
         versionCode 50
         versionName "0.50"
     }
@@ -20,12 +20,13 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     buildFeatures {
         viewBinding true
     }
+    namespace 'com.th7.flinspirer.admin'
 }
 
 dependencies {
